overflow bug attempt 1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,7 @@ html{
 }
 
 body{
-    max-width:2100px;
+    // max-width:2100px;
     width: 100%;
 	overflow-y: scroll; 
 	font-family:$main-font;
